--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.addons</groupId>
 	<artifactId>vaadin-excel-exporter-root</artifactId>
 	<packaging>pom</packaging>
-	<version>2.1-SNAPSHOT</version>
+	<version>2.1.1</version>
 	<name>Excel Exporter Root</name>
 
 	<prerequisites>
